language/move-lang/tests/move_check/unit_test/script_with_test_on_main.move
// Test a single annotation inside of a script that isn't allowed.
script {
    #[test]
    fun main() { }
}
